@@ -29,6 +29,7 @@ class XDB:
 	def getRegistration(self, jabberID):
 		""" Retrieve registration information from the XDB.
 		Returns a username and password. """
+		self.db.ping()
 		c=self.db.cursor()
 		c.execute("SELECT username,password FROM register WHERE owner = '%s'" % jabberID)
 		ret = c.fetchone()
@@ -40,6 +41,7 @@ class XDB:
 
 	def getRegistrationList(self):
 		""" Returns an array of all of the registered jids. """
+		self.db.ping()
 		c=self.db.cursor()
 		c.execute("SELECT owner FROM register")
 		results = []
@@ -53,12 +55,14 @@ class XDB:
 	def setRegistration(self, jabberID, username, password):
 		""" Sets up or creates a registration in the XDB.
 		username and password are for the legacy account. """
+		self.db.ping()
 		c=self.db.cursor()
 		c.execute("DELETE FROM register WHERE owner = '%s'" % jabberID)
 		c.execute("INSERT INTO register(owner,username,password) VALUES('%s','%s','%s')" % (jabberID, username, password))
 
 	def removeRegistration(self, jabberID):
 		""" Removes a registration from the XDB. """
+		self.db.ping()
 		c=self.db.cursor()
 		c.execute("DELETE FROM register WHERE owner = '%s'" % jabberID)
 		c.execute("DELETE FROM settings WHERE owner = '%s'" % jabberID)
@@ -67,6 +71,7 @@ class XDB:
 
 	def getSettingList(self, jabberID):
 		""" Gets a list of all settings for a user from the XDB. """
+		self.db.ping()
 		c=self.db.cursor()
 		c.execute("SELECT variable,value FROM settings WHERE owner = '%s'" % (jabberID))
 		results = []
@@ -80,6 +85,7 @@ class XDB:
 
 	def getSetting(self, jabberID, variable):
 		""" Gets a user setting from the XDB. """
+		self.db.ping()
 		c=self.db.cursor()
 		c.execute("SELECT value FROM settings WHERE owner = '%s' AND variable = '%s'" % (jabberID, variable))
 		ret = c.fetchone()
@@ -91,6 +97,7 @@ class XDB:
 
 	def setSetting(self, jabberID, variable, value):
 		""" Sets a user setting in the XDB. """
+		self.db.ping()
 		c=self.db.cursor()
 		c.execute("DELETE FROM settings WHERE owner = '%s' AND variable = '%s'" % (jabberID, variable))
 		c.execute("INSERT INTO settings(owner,variable,value) VALUES('%s','%s','%s')" % (jabberID, variable, value))
@@ -98,6 +105,7 @@ class XDB:
 	def getListEntry(self, type, jabberID, legacyID):
 		""" Retrieves a legacy ID entry from a list in
 		the XDB, based off the type and jabberID you provide. """
+		self.db.ping()
 		attributes = {}
 		c=self.db.cursor()
 		c.execute("SELECT attribute,value FROM list_attributes WHERE owner = '%s' AND type = '%s' AND jid = '%s'" % (jabberID, type, legacyID))
@@ -111,6 +119,7 @@ class XDB:
 	def getListTypes(self, jabberID):
 		""" Returns an array containing a list of all list types
 		associated with a user. """
+		self.db.ping()
 		types = []
 		c=self.db.cursor()
 		c.execute("SELECT type FROM lists WHERE owner = '%s'" % (jabberID))
@@ -125,6 +134,7 @@ class XDB:
 		""" Retrieves an array containing an entire list of a
 		 jabberID's from the XDB, based off the type and jabberID
 		you provide. """
+		self.db.ping()
 		entities = []
 		c=self.db.cursor()
 		c.execute("SELECT jid FROM lists WHERE owner = '%s' AND type = '%s'" % (jabberID, type))
@@ -148,16 +158,18 @@ class XDB:
 	def setListEntry(self, type, jabberID, legacyID, payload = {}):
 		""" Updates or adds a legacy ID entry to a list in
 		the XDB, based off the type and jabberID you provide. """
+		self.db.ping()
 		c=self.db.cursor()
 		c.execute("DELETE FROM lists WHERE owner = '%s' AND type = '%s' AND jid = '%s'" % (jabberID, type, legacyID))
 		c.execute("DELETE FROM list_attributes WHERE owner = '%s' AND type = '%s' AND jid = '%s'" % (jabberID, type, legacyID))
 		c.execute("INSERT INTO lists(owner,type,jid) VALUES('%s','%s','%s')" % (jabberID, type, legacyID))
 		for p in payload.keys():
-			c.execute("INSERT INTO list_attributes(owner,type,jid,attribute,value) VALUES('%s','%s','%s','%s','%s')" % (jabberID, type, legacyID, p, payload[p]))
+			c.execute("INSERT INTO list_attributes(owner,type,jid,attribute,value) VALUES('%s','%s','%s','%s','%s')" % (jabberID, type, legacyID, p, payload[p].replace("'", "\\'")))
 
 	def removeListEntry(self, type, jabberID, legacyID):
 		""" Removes a legacy ID entry from a list in
 		the XDB, based off the type and jabberID you provide. """
+		self.db.ping()
 		c=self.db.cursor()
 		c.execute("DELETE FROM lists WHERE owner = '%s' AND type = '%s' AND jid = '%s'" % (jabberID, type, legacyID))
 		c.execute("DELETE FROM list_attributes WHERE owner = '%s' AND type = '%s' AND jid = '%s'" % (jabberID, type, legacyID))
